--- a/PcAssemblyAssistant/PcAssemblyAssistant/PcAssemblyAssistant.csproj
+++ b/PcAssemblyAssistant/PcAssemblyAssistant/PcAssemblyAssistant.csproj
@@ -19,4 +19,9 @@
     <None Include="wwwroot\swagger-ui\swagger-custom-styles.css" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BLL\BLL.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
