--- a/PcAssemblyAssistant/Common/Common.csproj
+++ b/PcAssemblyAssistant/Common/Common.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+    <Folder Include="Extentions\" />
+    <Folder Include="Recources\" />
+  </ItemGroup>
+
 </Project>
