jwt authentication with save token in db

--- a/PcAssemblyAssistant/PcAssemblyAssistant/appsettings.json
+++ b/PcAssemblyAssistant/PcAssemblyAssistant/appsettings.json
@@ -1,8 +1,18 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=.;database=PcAssemblyAssistantDB;User Id=sa;Password=1;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Console": {
+      "IncludeScopes": true,
+      "LogLevel": {
+        "Microsoft.Extensions.Hosting": "Warning",
+        "Default": "Information"
+      }
     }
   },
 
@@ -12,6 +22,14 @@
     "ClientSecret": "my secrete",
     "AuthorizationUrl": "https://login.microsoftonline.com/tenantid/oauth2/v2.0/authorize",
     "TokenUrl": "https://login.microsoftonline.com/tenantid/oauth2/v2.0/token"
+  },
+
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr",
+    "TokenValidityInMinutes": 1,
+    "RefreshTokenValidityInDays": 7
   },
 
   "Identity": {
