Add Unit of work, base repository, base service, Edit namespace for DAL

--- a/PcAssemblyAssistant/BLL/BLL.csproj
+++ b/PcAssemblyAssistant/BLL/BLL.csproj
@@ -7,17 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
-    <ProjectReference Include="..\DBO\DBO(DAL).csproj" />
+    <ProjectReference Include="..\DBO\DAL.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
